<resources>
    <string name="app_name" translatable="false">Next Bit</string>
    <string name="get_started">get Started</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_rep_pass">repeat password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="contact">Contact us </string>
    <string name="enter_your_age">enter your age</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="courses">Courses</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="best_courses">Best Courses</string>
    <string name="up_coming_courses">UpComing Courses</string>
    <string name="app_description">The best programming learning app ever</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="free" translatable="false">Free</string>
</resources>